--- a/uavcan/MotorAsst/ui/main.ui
+++ b/uavcan/MotorAsst/ui/main.ui
@@ -132,7 +132,7 @@
       <x>250</x>
       <y>25</y>
       <width>101</width>
-      <height>81</height>
+      <height>86</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -377,6 +377,32 @@
         <widget class="QLineEdit" name="lineEdit_7_1"/>
        </item>
       </layout>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="verticalLayoutWidget_6">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>240</y>
+      <width>101</width>
+      <height>56</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_6">
+     <item>
+      <widget class="QRadioButton" name="radioButton_6">
+       <property name="text">
+        <string>抱闸</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QRadioButton" name="radioButton_7">
+       <property name="text">
+        <string>抱闸解除</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </widget>
