--- a/uavcan/MotorAsst/ui/main.ui
+++ b/uavcan/MotorAsst/ui/main.ui
@@ -165,7 +165,7 @@
       <x>250</x>
       <y>110</y>
       <width>111</width>
-      <height>62</height>
+      <height>91</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -176,6 +176,13 @@
       <widget class="QPushButton" name="pushButton">
        <property name="text">
         <string>目标值设置</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_3">
+       <property name="text">
+        <string>目标值解除</string>
        </property>
       </widget>
      </item>
